引入spring-cloud的包管理

--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,7 @@
     <maven.compiler.target>8</maven.compiler.target>
 
     <!--
-      spring framework version
-      How to select version? see:
+      Spring框架相关版本，怎么选择版本，请看：
       https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E
     -->
     <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
@@ -30,14 +29,26 @@
   <dependencyManagement>
     <dependencies>
       <!--
-        SpringBoot dependencies
-        import spirngboot-dependencies pom to manage dependency's version instead of extend
+        SpringBoot 依赖
+        引入 spirngboot-dependencies pom 是为了管理java包。代替了直接继承parent：
         <parent>...<artifactId>spring-boot-starter-parent</artifactId>...<parent>
       -->
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
         <version>${spring-boot.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+
+      <!--
+        引入 spring-cloud-dependencies来管理版本
+        因为以后会用到spring-cloud-gateway，这些属于spring-cloud生态圈的中间件
+      -->
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
