--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <groupId>org.backend.cloud</groupId>
   <artifactId>spirng-cloud-project-parent</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+  <modules>
+    <module>common-service</module>
+    <module>business-service</module>
+  </modules>
   <packaging>pom</packaging>
 
   <properties>
