--- a/business-service/order-micro-service/pom.xml
+++ b/business-service/order-micro-service/pom.xml
@@ -16,6 +16,14 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+    <!--
+      使用feign代替RestTemplate向其他微服务发起请求
+      文档：https://docs.spring.io/spring-cloud-openfeign/docs/2.2.10.RELEASE/reference/html/#spring-cloud-feign
+    -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
