--- a/common-service/pom.xml
+++ b/common-service/pom.xml
@@ -12,6 +12,8 @@
   <artifactId>common-service</artifactId>
   <packaging>pom</packaging>
   <modules>
+    <module>common-service-model</module>
+    <module>common-service-api</module>
     <module>user-micro-service</module>
   </modules>
 
