--- a/business-service/business-service-api/pom.xml
+++ b/business-service/business-service-api/pom.xml
@@ -3,18 +3,20 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>spirng-cloud-project-parent</artifactId>
+    <artifactId>business-service</artifactId>
     <groupId>org.backend.cloud</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>business-service</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>business-service-model</module>
-    <module>business-service-api</module>
-    <module>order-micro-service</module>
-  </modules>
+  <artifactId>business-service-api</artifactId>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>order-service-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+  </dependencies>
 
 </project>
