--- a/common-service/user-micro-service/user-service-api/pom.xml
+++ b/common-service/user-micro-service/user-service-api/pom.xml
@@ -3,30 +3,26 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>common-service</artifactId>
+    <artifactId>user-micro-service</artifactId>
     <groupId>org.backend.cloud</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>user-micro-service</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-    <module>user-service-model</module>
-    <module>user-service-api</module>
-    <module>user-service-server</module>
-  </modules>
-
+  <artifactId>user-service-api</artifactId>
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>openfegin-spring-cloud-starter</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.alibaba.cloud</groupId>
-      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>user-service-model</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
+
 </project>
