--- a/common-service/user-micro-service/user-service-api/pom.xml
+++ b/common-service/user-micro-service/user-service-api/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>user-service-model</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
