--- a/freamwork-common/common/pom.xml
+++ b/freamwork-common/common/pom.xml
@@ -3,29 +3,30 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>order-micro-service</artifactId>
+    <artifactId>freamwork-common</artifactId>
     <groupId>org.backend.cloud</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>order-service-server</artifactId>
+  <artifactId>common</artifactId>
 
   <dependencies>
+    <!--Jackson required包-->
     <dependency>
-      <groupId>org.backend.cloud</groupId>
-      <artifactId>user-service-api</artifactId>
-      <version>${project.version}</version>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.13.3</version>
     </dependency>
     <dependency>
-      <groupId>org.backend.cloud</groupId>
-      <artifactId>order-service-model</artifactId>
-      <version>${project.version}</version>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.3</version>
     </dependency>
-
     <dependency>
-      <groupId>com.alibaba.cloud</groupId>
-      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.13.3</version>
     </dependency>
   </dependencies>
 
