--- a/freamwork-common/openfegin-spring-cloud-starter/pom.xml
+++ b/freamwork-common/openfegin-spring-cloud-starter/pom.xml
@@ -24,6 +24,11 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>common</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
