--- a/business-service/order-micro-service/order-service-server/src/main/resources/application.yml
+++ b/business-service/order-micro-service/order-service-server/src/main/resources/application.yml
@@ -3,3 +3,10 @@ server:
 logging:
   level:
     root: info
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:pub2.key
+
