--- a/common-service/api-gateway-micro-service/pom.xml
+++ b/common-service/api-gateway-micro-service/pom.xml
@@ -3,31 +3,21 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>order-micro-service</artifactId>
+    <artifactId>common-service</artifactId>
     <groupId>org.backend.cloud</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>order-service-server</artifactId>
+  <artifactId>api-gateway-micro-service</artifactId>
 
   <dependencies>
+    <!--网关-->
     <dependency>
-      <groupId>org.backend.cloud</groupId>
-      <artifactId>authorization-client</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-gateway</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.backend.cloud</groupId>
-      <artifactId>user-service-api</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.backend.cloud</groupId>
-      <artifactId>order-service-model</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-
+    <!--nacos服务发现依赖-->
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
