--- a/common-service/uaa-micro-service/pom.xml
+++ b/common-service/uaa-micro-service/pom.xml
@@ -3,18 +3,18 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>business-service</artifactId>
+    <artifactId>common-service</artifactId>
     <groupId>org.backend.cloud</groupId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>business-service-model</artifactId>
-
-  <properties>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <artifactId>uaa-micro-service</artifactId>
+  <packaging>pom</packaging>
+  <description>User Authentication Authorization(用户认证和授权)</description>
+  <modules>
+    <module>authentication-server</module>
+    <module>authorization-client</module>
+  </modules>
 
 </project>
