--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <groupId>org.springframework.boot</groupId>
+    <version>2.2.5.RELEASE</version>
+  </parent>
+
   <groupId>org.backend.cloud</groupId>
   <artifactId>spirng-cloud-project-parent</artifactId>
   <version>1.0.0-SNAPSHOT</version>
@@ -29,6 +35,8 @@
     <spring-boot.version>2.2.5.RELEASE</spring-boot.version>
     <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
     <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
+
+    <jjwt.version>0.11.5</jjwt.version>
   </properties>
 
   <dependencyManagement>
@@ -37,14 +45,18 @@
         SpringBoot 依赖
         引入 spirngboot-dependencies pom 是为了管理java包。代替了直接继承parent：
         <parent>...<artifactId>spring-boot-starter-parent</artifactId>...<parent>
+        除非公司强制使用的自己的parent，否则不建议自己import springboot的dependencies。
+        比如，想升级spring-security版本时，如果继承了springboot的parent，则在<properties>重新版本号，
+        刷新maven就能升级版本。
+        如果是import dependencies这种方式，想要升级spring-security就麻烦多了。
       -->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+      <!--<dependency>-->
+      <!--  <groupId>org.springframework.boot</groupId>-->
+      <!--  <artifactId>spring-boot-dependencies</artifactId>-->
+      <!--  <version>${spring-boot.version}</version>-->
+      <!--  <type>pom</type>-->
+      <!--  <scope>import</scope>-->
+      <!--</dependency>-->
 
       <!--
         引入 spring-cloud-dependencies来管理版本
@@ -65,6 +77,22 @@
         <version>${spring-cloud-alibaba.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-api</artifactId>
+        <version>${jjwt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-impl</artifactId>
+        <version>${jjwt.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.jsonwebtoken</groupId>
+        <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+        <version>${jjwt.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
