--- a/business-service/order-micro-service/order-service-server/src/main/resources/application.yml
+++ b/business-service/order-micro-service/order-service-server/src/main/resources/application.yml
@@ -8,5 +8,5 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          public-key-location: classpath:pub2.key
+          public-key-location: classpath:pub.key
 
