--- a/common-service/user-micro-service/user-service-server/pom.xml
+++ b/common-service/user-micro-service/user-service-server/pom.xml
@@ -13,6 +13,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>authorization-client</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
