--- a/common-service/user-micro-service/user-service-server/src/main/resources/application.yml
+++ b/common-service/user-micro-service/user-service-server/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8099
+
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          public-key-location: classpath:pub.key
