--- a/freamwork-common/pom.xml
+++ b/freamwork-common/pom.xml
@@ -15,5 +15,6 @@
   <modules>
     <module>common</module>
     <module>openfegin-spring-cloud-starter</module>
+    <module>web-application-starter</module>
   </modules>
 </project>
