--- a/freamwork-common/web-application-starter/pom.xml
+++ b/freamwork-common/web-application-starter/pom.xml
@@ -9,22 +9,19 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>openfegin-spring-cloud-starter</artifactId>
+  <artifactId>web-application-starter</artifactId>
+  <description>web应用需要引用这个包，这个会封装一些全局配置</description>
 
   <dependencies>
-    <!--
-      使用feign代替RestTemplate向其他微服务发起请求
-      文档：https://docs.spring.io/spring-cloud-openfeign/docs/2.2.10.RELEASE/reference/html/#spring-cloud-feign
-    -->
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.backend.cloud</groupId>
-      <artifactId>web-application-starter</artifactId>
+      <artifactId>common</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
-
 </project>
