--- a/freamwork-common/web-application-starter/pom.xml
+++ b/freamwork-common/web-application-starter/pom.xml
@@ -20,7 +20,7 @@
 
     <dependency>
       <groupId>org.backend.cloud</groupId>
-      <artifactId>common</artifactId>
+      <artifactId>project-commons</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
