--- a/business-service/order-micro-service/order-service-server/pom.xml
+++ b/business-service/order-micro-service/order-service-server/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
     <dependency>
       <groupId>org.backend.cloud</groupId>
+      <artifactId>web-application-starter</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
       <artifactId>order-service-model</artifactId>
       <version>${project.version}</version>
     </dependency>
