--- a/common-service/api-gateway-micro-service/src/main/resources/application.yml
+++ b/common-service/api-gateway-micro-service/src/main/resources/application.yml
@@ -36,3 +36,5 @@ spring:
             allowedHeaders: "*" # 允许在请求中携带的头信息
             allowCredentials: true # 是否允许携带cookie
             maxAge: 360000 # 这次跨域检测的有效期
+  main:
+    allow-bean-definition-overriding: true
