--- a/common-service/uaa-micro-service/authentication-server/pom.xml
+++ b/common-service/uaa-micro-service/authentication-server/pom.xml
@@ -15,6 +15,16 @@
   <dependencies>
     <dependency>
       <groupId>org.backend.cloud</groupId>
+      <artifactId>authentication-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>web-application-starter</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
       <artifactId>user-service-api</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -22,6 +32,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
     </dependency>
 
     <dependency>
@@ -40,8 +55,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-redis</artifactId>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>cache-starter</artifactId>
+      <version>${project.version}</version>
     </dependency>
 
     <!--测试-->
