--- a/common-service/uaa-micro-service/authorization-client/pom.xml
+++ b/common-service/uaa-micro-service/authorization-client/pom.xml
@@ -14,6 +14,18 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>project-commons</artifactId>
+      <version>${project.version}</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>user-service-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
