--- a/common-service/user-micro-service/user-service-api/pom.xml
+++ b/common-service/user-micro-service/user-service-api/pom.xml
@@ -25,7 +25,7 @@
     </dependency>
     <dependency>
       <groupId>org.backend.cloud</groupId>
-      <artifactId>common</artifactId>
+      <artifactId>project-commons</artifactId>
       <version>${project.version}</version>
     </dependency>
   </dependencies>
