--- a/common-service/user-micro-service/user-service-model/pom.xml
+++ b/common-service/user-micro-service/user-service-model/pom.xml
@@ -11,10 +11,19 @@
 
   <artifactId>user-service-model</artifactId>
 
-  <properties>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>project-commons</artifactId>
+      <version>${project.version}</version>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
 </project>
