--- a/common-service/user-micro-service/user-service-server/pom.xml
+++ b/common-service/user-micro-service/user-service-server/pom.xml
@@ -17,25 +17,32 @@
       <artifactId>authorization-client</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>mysql-boot-starter</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>web-application-starter</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.backend.cloud</groupId>
       <artifactId>user-service-model</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.backend.cloud</groupId>
-      <artifactId>common</artifactId>
-      <version>${project.version}</version>
-    </dependency>
 
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
       <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
