--- a/common-service/user-micro-service/user-service-server/src/main/resources/application.yml
+++ b/common-service/user-micro-service/user-service-server/src/main/resources/application.yml
@@ -7,3 +7,13 @@ spring:
       resourceserver:
         jwt:
           public-key-location: classpath:pub.key
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/demo_2022_09_04?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    username: root
+    password: root
+    hikari:
+      idle-timeout: 30000
+      maximum-pool-size: 50
+      connection-timeout: 60000
