--- a/freamwork-common/mysql-boot-starter/pom.xml
+++ b/freamwork-common/mysql-boot-starter/pom.xml
@@ -9,24 +9,26 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>common</artifactId>
+  <artifactId>mysql-boot-starter</artifactId>
 
   <dependencies>
-    <!--Jackson required包-->
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>2.13.3</version>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.13.3</version>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
     </dependency>
+    <!-- 阿里数据库连接池 -->
+    <!--<dependency>-->
+    <!--  <groupId>com.alibaba</groupId>-->
+    <!--  <artifactId>druid-spring-boot-starter</artifactId>-->
+    <!--</dependency>-->
+    <!-- HikariCP数据库连接池 -->
     <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-annotations</artifactId>
-      <version>2.13.3</version>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
     </dependency>
   </dependencies>
 
