--- a/freamwork-common/openfegin-spring-cloud-starter/pom.xml
+++ b/freamwork-common/openfegin-spring-cloud-starter/pom.xml
@@ -22,8 +22,13 @@
     </dependency>
     <dependency>
       <groupId>org.backend.cloud</groupId>
-      <artifactId>web-application-starter</artifactId>
+      <artifactId>project-commons</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
