调整登录的代码

--- a/common-service/uaa-micro-service/authentication-server/pom.xml
+++ b/common-service/uaa-micro-service/authentication-server/pom.xml
@@ -25,7 +25,12 @@
     </dependency>
     <dependency>
       <groupId>org.backend.cloud</groupId>
-      <artifactId>user-service-api</artifactId>
+      <artifactId>openfegin-spring-cloud-starter</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.backend.cloud</groupId>
+      <artifactId>user-service-model</artifactId>
       <version>${project.version}</version>
     </dependency>
 
